Removed unused code, and fixed Piggieback's namespace which changed in newer versions