@@ -10,16 +10,7 @@
             [lein-ancient "1.0.0-RC3"]]
   :min-lein-version "2.5.3"
   :source-paths ["src/clj" "src/cljc"]
-  :jvm-opts ~(concat
-                                        ; Normal JVM opts to pass in
-              ["-Xmx1g"]
-                                        ; Java 9+ recognition, adding --add-modules. Java versions before 9
-                                        ; had a different version syntax where they contained '.' delimiters,
-                                        ; from Java 9 onwards it has a simple versioning scheme based on one
-                                        ; number.
-              (if (false? (.contains (System/getProperty "java.version") "."))
-                ["--add-modules" "java.xml.bind"]
-                []))
+
   :clean-targets ^{:protect false} ["resources/public/js/compiled"
                                     "resources/public/css"
                                     "target"]
@@ -27,13 +18,13 @@
   ;; PROFILES
   :profiles {:dev {:dependencies [[binaryage/devtools "1.0.4"]
                                   [figwheel-sidecar "0.5.20"]
-                                  [com.cemerick/piggieback "0.2.2"]
+                                  [cider/piggieback "0.5.3"]
                                   [org.clojure/test.check "1.1.0"]]
                    :plugins      [[lein-figwheel "0.5.20"]]}}
 
   ;; DEV
   :figwheel {:css-dirs ["resources/public/css"]}
-  :repl-options {:nrepl-middleware [cemerick.piggieback/wrap-cljs-repl]}
+  :repl-options {:nrepl-middleware [cider.piggieback/wrap-cljs-repl]}
 
   ;; TEST
   :test-paths ["test/clj"]
